Bug 76697 - ODF import: attribute fo:border="none" is not correctly loaded
Summary: ODF import: attribute fo:border="none" is not correctly loaded
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.2.3.1 rc
Hardware: Other All
: medium blocker
Assignee: Kohei Yoshida
URL:
Whiteboard: odf target:4.2.3
Keywords: bibisected, regression
: 76853 76885 76896 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-03-27 16:29 UTC by Rico Tzschichholz
Modified: 2015-12-17 07:53 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Example contains two frames - with and without a border (9.86 KB, application/vnd.oasis.opendocument.text)
2014-03-27 16:29 UTC, Rico Tzschichholz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rico Tzschichholz 2014-03-27 16:29:45 UTC
Created attachment 96468 [details]
Example contains two frames - with and without a border

Creating a frame without a border results in the expected result. Saving the document and opening it again shows the created frame *with* a border.

This worked as expected in 4.2.2.1.
Comment 1 Björn Michaelsen 2014-03-27 16:31:05 UTC
can reproduce on 4.2.3.2 on Ubuntu
Comment 2 Björn Michaelsen 2014-03-27 16:35:37 UTC
Steps to reproduce:
1/ Open Writer
2/ Insert->Frame
3/ Right Click->Frame->Borders Tab->disable all borders
borders disappear

4/ save, reload

Excepted result:
no borders

Actual result:
borders reappear
Comment 3 Björn Michaelsen 2014-03-29 13:54:22 UTC
# bad: [b740953537b324e157b22ce3bd46611b01f78e47] Hopefully fix Windows HiDPI toolbar layout bug
# good: [135a37bd7b5a1a50e3da9cc666402adbd348d025] fix crash during xls import, related fdo#36580
git bisect start 'HEAD' '135a37bd7b5a1a50e3da9cc666402adbd348d025'
# good: [4040c461fc244940c6817770104ccbcc013ac1f3] cppcheck: duplicateIf
git bisect good 4040c461fc244940c6817770104ccbcc013ac1f3
# bad: [1b2cf579105d8a1e44b5e2a8aafb79c274fc8455] fdo#71784: Invalid Sections getting added to the document after RT
git bisect bad 1b2cf579105d8a1e44b5e2a8aafb79c274fc8455
# bad: [9a156365277c93bd66c2ef21c42bfa377eaf314b] rhbz#988516: DOCX import: fix context stack when importing header/footer
git bisect bad 9a156365277c93bd66c2ef21c42bfa377eaf314b
# good: [6b6398b72401b35dc0d01de70ee2124a0a4072a8] fdo#45935: try hard to paint a frame for menus
git bisect good 6b6398b72401b35dc0d01de70ee2124a0a4072a8
# bad: [b3bc4e283fc941c6f8c334de31fd34031afa0fef] Oopsy.
git bisect bad b3bc4e283fc941c6f8c334de31fd34031afa0fef
# good: [682f723d31e6c4a59254a08f5ec62abc700f3fd6] fdo#59329 Fix docked window border lines
git bisect good 682f723d31e6c4a59254a08f5ec62abc700f3fd6
# bad: [5e34a3236258f47374c34e5c7ab92fde9b981bb7] Ensure that numeric array storage is aligned to 256-byte boundary.
git bisect bad 5e34a3236258f47374c34e5c7ab92fde9b981bb7
# bad: [743d331357af5204108186f0428e949f68d966c7] fdo#75260: Correctly draw double lines for both Writer and Calc.
git bisect bad 743d331357af5204108186f0428e949f68d966c7
# first bad commit: [743d331357af5204108186f0428e949f68d966c7] fdo#75260: Correctly draw double lines for both Writer and Calc.
 743d331357af5204108186f0428e949f68d966c7 is the first bad commit
commit 743d331357af5204108186f0428e949f68d966c7
Author: Kohei Yoshida <kohei.yoshida@collabora.com>
Date:   Mon Mar 3 17:58:11 2014 -0500

    fdo#75260: Correctly draw double lines for both Writer and Calc.
    
    Fix all sorts of incorrect double line handling in drawinglayer in order to
    draw thick-thin double line types correctly.  Also change handling of border
    lines in writer tables. There are still some outstanding issues but it's
    much better than how it was before.
    
    Also realized that Word and Excel handle simple thin double lines differently;
    Word varies widths of all of the lines and the gap whereas Excel only has one
    fixed size for its double line.  For this reason I decided to add a separate
    double line type (DOUBLE_THIN) to handle Excel's double line.
    
    (cherry picked from commit 2c62596cf264ef10749d8bfdb2bb2ebef2d98fbc)
    
    Conflicts:
    	cui/source/tabpages/border.cxx
    	sc/qa/unit/subsequent_export-test.cxx
    	sc/source/ui/view/tabvwsha.cxx
    	sw/source/core/layout/paintfrm.cxx
    	xmloff/source/style/bordrhdl.cxx
    
    Change-Id: Iaaa353b6e4f998b524262bea59260b4333e0cdb4
    Reviewed-on: https://gerrit.libreoffice.org/8464
    Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
    Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>
Comment 4 Björn Michaelsen 2014-03-29 20:44:51 UTC
After the change named in comment 3, the following attributes are missing from the "<style:graphic-properties ...>":

fo:background-color="transparent"
style:background-transparency="100%"
draw:fill="solid"

and it misses a:

 <style:background-image/>

element in content. The issue is on loading though it seems: Both files saved (with the patch, without it) show a border with the patch, but show no border without the patch.
Comment 5 Cor Nouws 2014-04-01 08:29:42 UTC
*** Bug 76853 has been marked as a duplicate of this bug. ***
Comment 6 Cor Nouws 2014-04-01 08:29:56 UTC
*** Bug 76885 has been marked as a duplicate of this bug. ***
Comment 7 Cor Nouws 2014-04-01 08:30:41 UTC
(In reply to comment #5)
> *** Bug 76853 has been marked as a duplicate of this bug. ***

Still present in 4.2.3.2 :(
Comment 8 Cor Nouws 2014-04-01 08:32:37 UTC
Do we want to release 4.2.3 with this bug ?
Comment 9 Cor Nouws 2014-04-01 11:01:28 UTC
*** Bug 76896 has been marked as a duplicate of this bug. ***
Comment 10 Michael Stahl 2014-04-02 14:55:33 UTC
turns out that a commit from master was missing that removed a duplicate definition of an enum with a different value.
Comment 11 Commit Notification 2014-04-02 14:56:00 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7f3105323f1db11bc0a3ff5c5c71e1dc62338cc4&h=libreoffice-4-2

fdo#76697: Remove this duplicate and use the UNO constant values instead.


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-04-03 11:26:17 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c6a53777e6a83ffa89574295cd709b814c2d2a6b&h=libreoffice-4-2-3

fdo#76697: Remove this duplicate and use the UNO constant values instead.


It will be available already in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Robinson Tryon (qubit) 2015-12-17 07:53:50 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]