fdo#76697: Remove this duplicate and use the UNO constant values instead.

(cherry picked from commit 72b2fafebfc44fa90f08cc198e2fa5fc26154c5b)

Conflicts:
	xmloff/source/style/bordrhdl.cxx

This fixes the bug because in XMLBorderHdl::importXML() the value "none"
was rejected as invalid because API_LINE_NONE pointlessly had a
different value than BorderLineStyle::NONE.

Change-Id: Id81aacc6c594ad25d97f6f6dc578ed9ca16549ab
Signed-off-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 7f3105323f1db11bc0a3ff5c5c71e1dc62338cc4)
Reviewed-on: https://gerrit.libreoffice.org/8816
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>